# goit-cs-hw-05

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_sorter.ps1  run_wordcount.ps1
src/sorter_async/: cli.py  logger.py  sort_async.py
src/wordcount_mapreduce/: cli.py  fetch.py  mapreduce.py  visualize.py
tests/: test_sorter.py  test_wordcount.py
